# DownloadLib

./: CMakeLists.txt
include/: Downloader.h  DownloaderRAM.h
include/DownloaderLib/: Downloader.h  DownloaderRAM.h
resources/: Downloader.h
src/: Downloader.cpp  DownloaderRAM.cpp
